--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,20 @@ img {
 
 }
 
+.active {
+    position: relative;
+    color: var(--primary-accent-color);
+    
+}
+.active::after {
+    position: absolute;
+    content: '';
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+}
+
 /* ------------Address------------ */
 
 .head-address {
@@ -143,6 +157,15 @@ img {
     padding-bottom: 100px;
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-info {
+    margin-right: 120px;
+}
+
 .footer-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -167,6 +190,47 @@ img {
     max-width: 264px;
 }
 
+.footer-social-paragraph {
+    font-weight: 500;
+    color: var(--primary-white-color);
+    margin-bottom: 16px;
+}
+
+.footer-social-media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.footer-social-list {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--footer-background);
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+}
+
+.footer-social-svg {
+    fill: #F4F4FD;
+}
+
+.footer-social-list:hover,
+.footer-social-list:focus {
+    background-color: #31D0AA;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /* ------------Section1------------ */
 
 .visually-hidden { 
@@ -182,11 +246,15 @@ img {
 }
 
 .main-section {
-    background-color: var(--secondary-background);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7), 
+        rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg);
+    background-repeat: no-repeat;
     color: var(--primary-white-color);
     padding-top: 188px;
     padding-bottom: 188px;
-
+    
 }
 
 .main-container {
@@ -225,13 +293,10 @@ img {
     border: none;
 }
 
-.head-navigation-link {
-    
-}
-
 .main-section-btn:hover,
 .main-section-btn:focus {
     background: var(--primary-accent-background);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------Section2------------ */
@@ -249,7 +314,19 @@ img {
 }
 
 .advantages-list {
-    max-width: 264px;
+    width: 264px;
+    max-width: calc((100% - 3 * 24px) / 4);
+
+}
+
+.advantages-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
 
 .advantages-section-heading {
@@ -345,7 +422,99 @@ img {
     width: calc((100% - 3 * 24px) / 4);
 }
 
+.social-media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
 
+.social-media-list {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--footer-background);
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8px;
+}
+
+.social-media-link {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    fill: #F4F4FD;
+}
+
+.team-link:hover .social-media-list,
+.team-link:focus .social-media-list {
+    background-color: var(--primary-accent-background);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* ------------Section4------------ */
+
+.customers-section {
+    padding: 120px 156px;
+
+}
+
+.customers-heading {
+    font-family: var(--primary-font);
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--secondary-color);
+    margin-bottom: 72px;
+}
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+    max-width: 1128px;
+    /*align-items: center;
+    justify-content: center;*/
+}
+
+.customers-item {
+    width: calc((100% - 5 * 24px) / 6);
+    /*height: 88px;
+    width: 168px;*/
+    position: relative;
+}
+
+.customers-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    width: 168px;
+    height: 88px;
+    position: absolute;
+}
+
+.customers-svg {
+    fill: #8E8F99;
+}
+
+.customers-item:hover .customers-svg {
+    fill: var(--primary-accent-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-link:hover {
+    border-color: var(--primary-accent-color);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 /* ----------------Portfolio---------------*/
 
@@ -455,3 +624,116 @@ img {
 .portfolio-item:nth-child(7) {
     margin-bottom: 0;
 }
+
+.portfolio-item:hover,
+.portfolio-item:hover {
+    border: 1px solid #F4F4FD;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+.text-overlay {
+    font-family: var(--primary-font);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--third-color);
+    background-color: var(--footer-background);
+
+    position: absolute;
+    padding: 32px 40px;
+    width: 360px;
+    height: 300px;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-link {
+    display: block;
+}
+
+.projects-link:hover,
+.projects-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-link:hover .text-overlay,
+.projects-link:focus .text-overlay {
+    transform: translateY(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*-----------Modal---------------*/
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /*background-color: ;*/
+}
+
+.modal {
+    position: absolute;
+    width: 408px;
+    min-height: 584px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FCFCFC;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.modal-btn {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    width: 24px;
+    height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: #E7E9FC;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #2E2F42;
+}
+
+.modal-btn:hover, 
+.modal-btn:focus {
+    background-color: var(--primary-accent-background);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover .close-svg, 
+.modal-btn:focus .close-svg {
+    fill: var(--primary-white-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-svg {
+    fill: currentColor;
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+
