--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ img {
 /* ------------Header------------ */
 .head {
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .head-container {
@@ -81,6 +82,7 @@ img {
 
     display: inline-block;
     margin-right: 76px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .head-logo-span {
@@ -118,9 +120,12 @@ img {
     position: absolute;
     content: '';
     bottom: -1px;
+    left: 0;
     width: 100%;
     height: 4px;
     border-radius: 2px;
+    background-color: var(--primary-accent-background);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------Address------------ */
@@ -142,6 +147,7 @@ img {
     letter-spacing: 0.02em;
     color: var(--primary-color);
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -193,6 +199,8 @@ img {
 .footer-social-paragraph {
     font-weight: 500;
     color: var(--primary-white-color);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
@@ -207,8 +215,6 @@ img {
     display: flex;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    background-color: var(--footer-background);
     position: relative;
     align-items: center;
     justify-content: center;
@@ -219,14 +225,18 @@ img {
     align-items: center;
     justify-content: center;
     position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--footer-background);
+    border-radius: 50%;
 }
 
 .footer-social-svg {
     fill: #F4F4FD;
 }
 
-.footer-social-list:hover,
-.footer-social-list:focus {
+.footer-social-link:hover,
+.footer-social-link:focus {
     background-color: #31D0AA;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -254,7 +264,9 @@ img {
     color: var(--primary-white-color);
     padding-top: 188px;
     padding-bottom: 188px;
-    
+    max-width: 1440px;
+    background-position: center;
+    background-size: cover;
 }
 
 .main-container {
@@ -291,12 +303,12 @@ img {
     align-items: center;
     height: 56px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-section-btn:hover,
 .main-section-btn:focus {
     background: var(--primary-accent-background);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------Section2------------ */
@@ -324,7 +336,7 @@ img {
     align-items: center;
     justify-content: center;
     height: 112px;
-    background-color: #F4F4FD;
+    background-color: var(--third-background);
     border-radius: 4px;
     margin-bottom: 8px;
 }
@@ -388,7 +400,7 @@ img {
 }
 
 .team-member {
-    padding: 32px 16px;
+    padding: 32px 0px;
 }
 
 .team-member-heading {
@@ -433,34 +445,36 @@ img {
     display: flex;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    background-color: var(--footer-background);
     position: relative;
-    align-items: center;
-    justify-content: center;
     margin-top: 8px;
+    border-radius: 50%;
 }
 
 .social-media-link {
     display: flex;
-    position: absolute;
     align-items: center;
-    width: 16px;
-    height: 16px;
-    fill: #F4F4FD;
-}
-
-.team-link:hover .social-media-list,
-.team-link:focus .social-media-list {
-    background-color: var(--primary-accent-background);
+    justify-content: center;
+    position: absolute;
+    fill: var(--third-color);
+    width: 100%;
+    height: 100%;
+    background-color: var(--footer-background);
+    border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* ------------Section4------------ */
+.team-link:hover .social-media-link,
+.team-link:focus .social-media-link {
+    background-color: var(--primary-accent-background);
+}
+
+
+
+/* ------------Section5------------ */
 
 .customers-section {
-    padding: 120px 156px;
-
+    padding-top: 120px;
+    padding-bottom: 120px; 
 }
 
 .customers-heading {
@@ -484,8 +498,8 @@ img {
 
 .customers-item {
     width: calc((100% - 5 * 24px) / 6);
-    /*height: 88px;
-    width: 168px;*/
+    height: 88px;
+    width: 168px;
     position: relative;
 }
 
@@ -495,25 +509,21 @@ img {
     justify-content: center;
     border: 1px solid #8E8F99;
     border-radius: 4px;
-    width: 168px;
-    height: 88px;
+    height: 100%;
+    width: 100%;
     position: absolute;
+    color: #8e8f99;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-svg {
-    fill: #8E8F99;
+    fill: currentColor;
 }
 
-.customers-item:hover .customers-svg {
-    fill: var(--primary-accent-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.customers-link:hover {
+.customers-link:hover,
+.customers-link:focus {
+    color: var(--primary-accent-color);
     border-color: var(--primary-accent-color);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ----------------Portfolio---------------*/
@@ -549,24 +559,28 @@ img {
 
 .portfolio-btn {
     font-family: "Roboto", sans-serif;
-
-
     display: flex;
     padding: 12px 24px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-btn:hover {
     color: var(--primary-white-color);
     background: var(--primary-accent-background);
     border: 1px solid transparent;
+    box-shadow: зі значенням 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-btn:focus {
     color: var(--primary-white-color);
     background: var(--primary-accent-background);
     border: 1px solid transparent;
+    box-shadow: зі значенням 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 
@@ -646,7 +660,7 @@ img {
     background-color: var(--footer-background);
 
     position: absolute;
-    padding: 32px 40px;
+    padding: 40px 32px;
     width: 360px;
     height: 300px;
     top: 0;
@@ -669,7 +683,6 @@ img {
 .projects-link:focus .text-overlay {
     transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*-----------Modal---------------*/
@@ -682,7 +695,7 @@ img {
     height: 100%;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /*background-color: ;*/
+    background-color: rgba(46, 47, 66, 0.4);
 }
 
 .modal {
@@ -695,6 +708,7 @@ img {
     background-color: #FCFCFC;
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn {
@@ -703,6 +717,7 @@ img {
     top: 24px;
     width: 24px;
     height: 24px;
+    padding: 0;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: #E7E9FC;
     border-radius: 50%;
@@ -712,18 +727,19 @@ img {
     align-items: center;
     justify-content: center;
     color: #2E2F42;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover, 
 .modal-btn:focus {
     background-color: var(--primary-accent-background);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
 }
 
 .modal-btn:hover .close-svg, 
 .modal-btn:focus .close-svg {
     fill: var(--primary-white-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-svg {
