--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,6 @@ img {
 
     display: inline-block;
     margin-right: 76px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .head-logo-span {
@@ -103,6 +102,7 @@ img {
     color: var(--secondary-color);
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .head-navigation-link:hover,
@@ -229,6 +229,7 @@ img {
     height: 100%;
     background-color: var(--footer-background);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-svg {
@@ -237,8 +238,7 @@ img {
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-    background-color: #31D0AA;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #31d0aa;
 }
 
 /* ------------Section1------------ */
@@ -463,11 +463,10 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-link:hover .social-media-link,
-.team-link:focus .social-media-link {
+.social-media-link:hover,
+.social-media-link:focus {
     background-color: var(--primary-accent-background);
 }
-
 
 
 /* ------------Section5------------ */
@@ -492,8 +491,6 @@ img {
     display: flex;
     gap: 24px;
     max-width: 1128px;
-    /*align-items: center;
-    justify-content: center;*/
 }
 
 .customers-item {
@@ -569,18 +566,12 @@ img {
                 box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn:hover {
-    color: var(--primary-white-color);
-    background: var(--primary-accent-background);
-    border: 1px solid transparent;
-    box-shadow: зі значенням 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
+.portfolio-btn:hover,
 .portfolio-btn:focus {
     color: var(--primary-white-color);
     background: var(--primary-accent-background);
     border: 1px solid transparent;
-    box-shadow: зі значенням 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 
