--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,9 @@ img {
     fill: #F4F4FD;
 }
 
-.footer-social-link:hover,
+.footer-social-link:hover {
+    background-color: #31d0aa;
+}
 .footer-social-link:focus {
     background-color: #31d0aa;
 }
@@ -463,7 +465,9 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-link:hover,
+.social-media-link:hover {
+    background-color: var(--primary-accent-background);
+}
 .social-media-link:focus {
     background-color: var(--primary-accent-background);
 }
@@ -517,7 +521,10 @@ img {
     fill: currentColor;
 }
 
-.customers-link:hover,
+.customers-link:hover {
+    color: var(--primary-accent-color);
+    border-color: var(--primary-accent-color);
+}
 .customers-link:focus {
     color: var(--primary-accent-color);
     border-color: var(--primary-accent-color);
