--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ img {
     position: relative;
     align-items: center;
     justify-content: center;
+    border-radius: 50%;
 }
 
 .footer-social-link {
@@ -235,21 +236,29 @@ img {
 .footer-social-svg {
     fill: #F4F4FD;
 }
-
+/*
 .footer-social-list:hover,
 .footer-social-list:focus {
     background-color: #31d0aa;
 }
+*/
 
 .footer-social-link:hover,
 .footer-social-link:focus {
     background-color: #31d0aa;
 }
-
+.footer-social-link:hover .footer-social-svg,
+.footer-social-link:focus .footer-social-svg {
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/*
 .footer-social-list:hover .footer-social-link,
 .footer-social-list:focus .footer-social-link {
     background-color: #31d0aa;
 }
+*/
+
 
 
 /* ------------Section1------------ */
