--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,8 @@ img {
     color: var(--primary-white-color);
     padding-top: 188px;
     padding-bottom: 188px;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 1440px;
     background-position: center;
     background-size: cover;
@@ -654,8 +656,8 @@ img {
 
     position: absolute;
     padding: 40px 32px;
-    width: 360px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     transform: translateY(100%);
@@ -675,7 +677,6 @@ img {
 .projects-link:hover .text-overlay,
 .projects-link:focus .text-overlay {
     transform: translateY(0%);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /*-----------Modal---------------*/
